fix button container bleeding onto editor

--- a/src/main/frontend/themes/editor/styles.css
+++ b/src/main/frontend/themes/editor/styles.css
@@ -19,7 +19,7 @@
 .button-container {
     display: flex;
     gap: 10px;
-    padding: 15px;
+    padding: 0px;
     position: absolute;
     left: 10px;
 }
